# django_project_1

./: .gitignore  advertising_data.json  catalog_data.json  new_catalog.json  params.ini  pyproject.toml
advertising/: models.py  urls.py  views.py
advertising/migrations/: 0001_initial.py  0002_advertising_avatar.py  0003_alter_advertising_avatar.py
advertising/templates/advertising/: advertising_confirm_delete.html  advertising_detail.html  advertising_form.html  advertising_list.html
catalog/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: dbload.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_alter_product_category.py  0004_remove_product_manufactured_at.py  0005_alter_product_category.py  0006_blog.py  0007_blog_preview.py  0008_alter_blog_slug.py  0009_alter_blog_is_published.py  0010_version.py  0011_alter_version_number.py  0012_blog_owner_product_owner.py  0013_alter_blog_options.py  0014_alter_product_options_product_is_published.py  0015_alter_blog_options_alter_product_options.py
catalog/templates/catalog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  category_detail.html  contacts.html  index.html  main.html  product.html  product_form.html  version_confirm_delete.html  version_detail.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0003_user_token.py
(+8 files in other folders)
