[tool.poetry]
name = "django-home-task-1"
version = "0.1.0"
description = ""
authors = ["menosad"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"
ipython = "^8.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
